# glade

./: .gitignore  AGENTS.md  README.md
apps/: grazel-app.glade
client-rs/: Cargo.toml
client-rs/src/: client.rs  hash.rs  lib.rs  session.rs  supplier.rs  ws.rs
client-rs/tests/: integration.rs
client-ts/: package.json
client-ts/src/: bytes.ts  client.ts  fold.ts  hash.ts  session.ts  sha256.ts  store.ts
client-ts/test/: integration.test.ts  oracle.test.ts  session.test.ts  supplier_seam.test.ts
decl/: README.md  glade_decl.taut.py
demo/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  run_demo.py  start-demo.sh  stop-demo.sh  tsconfig.json  vite.config.ts
demo/ir/: workspace.ir.json  workspace.taut.py
demo/src/: App.tsx  ChatPanel.tsx  GwzPanel.tsx  WorkspacePanel.tsx  bootstrap.tsx  chat.ts  glade.ts  glial.ts  grips.ts  gwz.ts  index.css  manifest.ts  runtime.ts  tabs.tsx  taps.ts
dev-docs/: GladeClientRsNotes.md  GladeCutoverNotes.md  GladeDirectoryNotes.md  GladeGrazelAttachNotes.md  GladeGrythSecurityModelAnalysisPrompt.md  GladePeerSyncNotes.md  GladeRustOrbitStrategy.md  GladeSubstrateV1.md  GladeSystemDataSeamNotes.md  GladeTerminalSliceProposal.md  GladeZones.md  README.md
dev-docs/glade_sec_model-55/: GladeGrythSecurityModelAnalysis.md
docs/: README.md
grip-share/: package.json  pnpm-lock.yaml
grip-share/src/: binder.ts  decl.ts  manifest.ts
grip-share/test/: binder.test.ts  decl.test.ts  glial_cutover.test.ts  glial_path.test.ts  helpers.ts  log_binding.test.ts  manifest.test.ts  mlimp.test.ts  node_integration.test.ts
node/: Cargo.toml
node/ir/: sysdata.taut.py
node/src/: appdecl.rs  chain.rs  claims.rs  echo.rs  exchange.rs  frame.rs  iroh_carrier.rs  lib.rs  mesh.rs  peer.rs  registry.rs  router.rs  server.rs  session.rs  store.rs  sysdata.rs  sysdir.rs  ws.rs
wire-rs/: Cargo.toml
wire-rs/src/: generated.rs  lib.rs
