[package]
name = "glade-node"
version = "0.0.0"
edition = "2021"
description = "Glade node (GLP-0005) — localhost glade server: per-(share,origin) log store, WS carrier, routing, chain verification, echo provider."

[lib]
path = "src/lib.rs"

[[bin]]
name = "glade-node"
path = "src/bin/glade-node.rs"

[dependencies]
glade-wire = { path = "../wire-rs" }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
